change submit and change picture

--- a/pages/case/case.wxml
+++ b/pages/case/case.wxml
@@ -1,5 +1,5 @@
 <view class="main">
-  <image class="bg img" mode='widthFix' src="./image/caseBg.png"></image>
+  <image class="bg img" mode='widthFix' src="https://statich.yidianzixun.com/public/file/1542184054012/caseBg.png"></image>
   <view class="scroll">
     <scroll-view scroll-y scroll-with-animation="true" style="height:{{clientHeight}}px">
       <block wx:for="{{detail_links}}" wx:key="index">
