--- a/pages/adv/adv.wxml
+++ b/pages/adv/adv.wxml
@@ -1,11 +1,10 @@
 <view class="main">
-  <image class="bg img" mode='widthFix' src="./image/advBg.png"></image>
+  <image class="bg img" mode='widthFix' src="https://statich.yidianzixun.com/public/file/1542184054012/advBg.png"></image>
   <view class="scroll">
     <scroll-view scroll-y scroll-with-animation="true" style="height:{{clientHeight}}px">
-      <image src="./image/advPic2.png"></image>
-      <image src="./image/advPic3.png"></image>
-      <image src="./image/advPic2.png"></image>
-      <image src="./image/advPic3.png"></image>
+      <block wx:for="{{imgUrl}}" wx:key="index">
+        <image src="{{item}}"></image>
+      </block>  
     </scroll-view>
   </view>
 </view>
