--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -16,8 +16,8 @@
         </swiper-item>
       </block>
     </swiper>
-    <image class="left img" src="./image/left.png"></image>
-    <image class="right img" src="./image/right.png"></image>
+    <image class="left img" src="https://statich.yidianzixun.com/public/file/1542184054012/left.png"></image>
+    <image class="right img" src="https://statich.yidianzixun.com/public/file/1542184054012/right.png"></image>
   </view>  
   <!--产品图片-->
   <view class="content_img" id="content_img">
