--- a/pages/adv/adv.wxml
+++ b/pages/adv/adv.wxml
@@ -1,7 +1,7 @@
 <view class="main">
   <image class="bg img" mode='widthFix' src="https://statich.yidianzixun.com/public/file/1542184054012/advBg.png"></image>
   <view class="scroll">
-    <scroll-view scroll-y scroll-with-animation="true" style="height:{{clientHeight}}px">
+    <scroll-view scroll-y="true" scroll-x="false" scroll-with-animation="true" style="height:{{clientHeight}}px">
       <block wx:for="{{imgUrl}}" wx:key="index">
         <image src="{{item}}"></image>
       </block>  
