--- a/pages/information/information.wxss
+++ b/pages/information/information.wxss
@@ -69,8 +69,9 @@
   width:226rpx;
   height:70rpx;
   position:absolute;
-  top:840rpx;
-  left:250rpx;
+  bottom:200rpx;
+  left:50%;
+  margin-left:-113rpx;
 }
 
 .button image{
@@ -82,7 +83,7 @@
   width:165rpx;
   height:39rpx;
   position:absolute;
-  top:980rpx;
+  bottom:100rpx;
   left:50%;
   margin-left:-82rpx;
 }
