--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -21,6 +21,7 @@
   font-size:30rpx;
   color:#e9e9e9;
   line-height: 62rpx;
+  margin:0 auto;
 }
 .active{
   background-image: url(https://statich.yidianzixun.com/public/file/1542184054012/navBg.png);
@@ -96,7 +97,7 @@
   padding-top:30px;
 }
 .content_img image{
-  width:600rpx;
+  width:640rpx;
   margin:0 auto;
   display: block;
 }
